# ardupilot_gazebo

./: .clang-format  .dockerignore  .env  CMakeLists.txt  Dockerfile  Dockerfile.ardupilot  README.md  docker-compose.yaml  test_opencv_gstream.py
include/: GstCameraPlugin.hh
models/iris_with_standoffs/: model.sdf
src/: GstCameraPlugin.cc  GstCameraPlugin.cpp
